fix name field in asmdef

--- a/Sayabeans.VRCPhysBoneRelocator.asmdef
+++ b/Sayabeans.VRCPhysBoneRelocator.asmdef
@@ -1,5 +1,5 @@
 ﻿{
-	"name": "Sayamamebeans.VRCPhysBoneRelocator",
+	"name": "Sayabeans.VRCPhysBoneRelocator",
 	"references": [],
 	"includePlatforms": [
 		"Editor"
