--- a/Sayabeans.VRCPhysBoneRelocator.asmdef
+++ b/Sayabeans.VRCPhysBoneRelocator.asmdef
@@ -1,15 +1,17 @@
-﻿{
-	"name": "Sayabeans.VRCPhysBoneRelocator",
-	"references": [],
-	"includePlatforms": [
-		"Editor"
-	],
-	"excludePlatforms": [],
-	"allowUnsafeCode": false,
-	"overrideReferences": false,
-	"precompiledReferences": [],
-	"autoReferenced": true,
-	"defineConstraints": [],
-	"versionDefines": [],
-	"noEngineReferences": false
+{
+    "name": "Sayabeans.VRCPhysBoneRelocator",
+    "references": [
+        "GUID:295ffbe0b63504ae3a7879cf089501ba"
+    ],
+    "includePlatforms": [
+        "Editor"
+    ],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
