--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   "author":{
     "name": "Sayamame-beans",
     "url": "https://github.com/Sayamame-beans"
+  },
+  "vpmDependenices": {
+    "com.vrchat.avatars" : "3.1.x"
   }
 }
